--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,12 @@
   @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,900;1,900&display=swap');
   *{
     font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
   }
    body{
-    overflow-x: hidden
+    /* overflow-x: hidden */
    }
 
 @tailwind base;
